test/execflags/vass/print-callstack-on-error-1.good
print-callstack-on-error-1.chpl:13: In function 'test3':
print-callstack-on-error-1.chpl:14: error: error from test3, depth=0
while processing the following Chapel call chain:
  print-callstack-on-error-1.chpl:14: test3(z)
  print-callstack-on-error-1.chpl:10: test2(y)
  print-callstack-on-error-1.chpl:6: test1(x)
  print-callstack-on-error-1.chpl:3: top-level module statements for print-callstack-on-error-1
